# secretaria-el-cano

./: .env.example  .gitignore  Makefile  README.md  __init__.py  app.py  app_fallero.txt  main.py  pyproject.toml  requirements.txt  run_mysql_container.sh
.streamlit/: secrets.toml
config/: settings.py
constants/: messages.py
dao/: database.py  fallero_dao.py  user_dao.py  usuario_dao.py
docs/: MEJORAS_IMPLEMENTADAS.md
exceptions/: __init__.py
managers/: auth_manager.py  fallero_manager.py  ui_manager.py
models/: fallero.py  usuario.py
tests/: conftest.py  test_models.py
utils/: logger.py  translations.py
validators/: __init__.py
